[metadata]
name = create-aio-app
version = attr: create_aio_app.utils.versiontools.get_self_version
description = The tool that helps quickly create a basis for aiohttp application
long_description = file: README.md
long_description_content_type = text/markdown
platforms = 
    POSIX
author = Mykhailo Havelia
author_email = misha.gavela@gmail.com
license = MIT
license_file = LICENSE
url = https://github.com/aio-libs/create-aio-app
project_urls = 
    Source Code = https://github.com/aio-libs/create-aio-app
    GitHub Issues = https://github.com/aio-libs/create-aio-app/issues
    Documentation = https://create-aio-app.readthedocs.io/
    CI: Travis = https://travis-ci.com/aio-libs/create-aio-app

classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: POSIX
    Development Status :: 4 - Beta
    Framework :: AsyncIO

keywords =
    create-aio-app
    cookiecutter==1.7.0
    aiohttp


[options]
packages = find_namespace:
include_package_data = True
zip_safe = True
python_requires = >=3.6
setup_requires =
    setuptools_scm>=3.4
    setuptools_scm_git_archive==1.1
install_requires =
    cookiecutter==1.7.0
    click >= 7.0


[options.entry_points]
console_scripts =
    create-aio-app = create_aio_app.main:main
